--- a/LibrePatch.csproj
+++ b/LibrePatch.csproj
@@ -18,4 +18,10 @@
       <PackageReference Include="Mono.Cecil" Version="0.11.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Dalamud">
+        <HintPath>D:\FFXIVLuncher\XIVLauncherCN\Roaming\addon\Hooks\7.5.1.12\Dalamud.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
